tests/ui/new_ret_no_self.stderr
error: methods called `new` usually return `Self`
  --> $DIR/new_ret_no_self.rs:51:5
   |
51 | /     pub fn new() -> u32 {
52 | |         unimplemented!();
53 | |     }
   | |_____^

error: methods called `new` usually return `Self`
  --> $DIR/new_ret_no_self.rs:60:5
   |
60 | /     pub fn new(_: String) -> u32 {
61 | |         unimplemented!();
62 | |     }
   | |_____^

error: aborting due to 2 previous errors

